<resources>
    <string name="app_name">Blacksburg Transit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>

    <string name="menu_plan_trip">Plan a Trip</string>
    <string name="menu_map">Map</string>
    <string name="menu_routes">Routes</string>

    <string name="back">back</string>
    <string name="route_short_name">Route Short Name</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="percent_capacity">Percent Capacity</string>
    <string name="latest_event">Last Updated At</string>
    <string name="last_stop_name">Last Stop</string>
    <string name="map">Map</string>
    <string name="forward_arrow_desc">forward_arrow_desc</string>
    <string name="current_routes">Current Routes:</string>

    <string name="alert_details">Alert Details</string>
    <string name="departure_time">Departure Time</string>
    <string name="enter_start_destination">Enter Start Destination</string>
    <string name="enter_end_destination">Enter End Destination</string>
    <string name="plan_trip">Find Trip</string>
    <string name="start_nearest_stops">Start Nearest Stops</string>
    <string name="end_nearest_stops">End Nearest Stops</string>
    <string name="matching_routes">Matching Routes</string>
    <string name="weather_info_placeholder" />
    <string name="departure_date">Departure Date</string>
    <string name="route_name">Route Name</string>
    <string name="suggested_routes">Suggested Route(s)</string>
</resources>