<!-- res/layout/custom_balloon_view.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/maps_light_gray"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="8dp"
    tools:ignore="PrivateResource">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/map"
        android:src="@drawable/ic_marker" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:id="@+id/vehicle_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/route_short_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/route_short_name" />

        <TextView
            android:id="@+id/percent_capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent_capacity" />

        <TextView
            android:id="@+id/latest_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latest_event" />

        <TextView
            android:id="@+id/last_stop_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_stop_name" />
    </LinearLayout>
</LinearLayout>
