<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_plan_trip"
        android:name="com.example.btapp.ui.planTrip.PlanTripFragment"
        android:label="@string/menu_plan_trip"
        tools:layout="@layout/fragment_plan_trip" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.btapp.ui.map.CustomMapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_routes"
        android:name="com.example.btapp.ui.routes.RoutesFragment"
        android:label="@string/menu_routes"
        tools:layout="@layout/fragment_routes">
        <action
            android:id="@+id/actionRoutesFragmentToRouteDetailFragment"
            app:destination="@id/routeDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/routeDetailFragment"
        android:name="com.example.btapp.ui.routes.RouteDetailFragment"
        android:label="Route Detail"
        tools:layout="@layout/fragment_route_detail">
        <argument
            android:name="route"
            app:argType="com.example.btapp.CurrentRoutesResponse" />
    </fragment>


</navigation>